external-crates/move/crates/move-compiler/tests/development/enums/matching/nesting_with_phantoms_invalid.exp
error[E02013]: invalid phantom type parameter usage
   ┌─ tests/development/enums/matching/nesting_with_phantoms_invalid.move:20:51
   │
20 │     public struct PS<phantom T> { s: S , x: X, t: T}
   │                              -                    ^ Phantom type parameter cannot be used as a field type
   │                              │                     
   │                              'T' declared here as phantom

error[E02013]: invalid phantom type parameter usage
   ┌─ tests/development/enums/matching/nesting_with_phantoms_invalid.move:24:19
   │
22 │     public enum PE<phantom T> {
   │                            - 'T' declared here as phantom
23 │         One { s: S, x: X },
24 │         Two(S, X, T),
   │                   ^ Phantom type parameter cannot be used as a field type

